Eclipse clean up and new Hello on toolchain plugin

--- a/org.eclipse.cdt.cross.arc.gnu/about.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/about.properties
@@ -7,10 +7,9 @@
 # NOTE TO TRANSLATOR: Please do not translate the featureVersion variable.
 
 
-blurb=GNU ARC Eclipse Plug-in.\n\
+blurb=ARC GNU Toolchain Eclipse Plug-in.\n\
 \n\
-The GNU ARC Eclipse Plug-in is an Eclipse CDT Managed Build Extension for GNU ARC Toolchains  GNUARC, and supports the development of managed C/C++ applications for the ARC series of processors.\n\
+The ARC GNU Toolchain Eclipse Plug-in is an Eclipse CDT Managed Build Extension for the development of managed C/C++ applications for the ARC series of processors.\n\
 Version: {featureVersion}\n\
 \n\
-Copyright © 2013 Yunluz and others.\n\
-Visit http://sourceforge.net/projects/gnuarceclipse
+Copyright © 2013 Synopsys, Inc.  All rights reserved.
