Eclipse clean up on features (Version etc.)

--- a/org.eclipse.cdt.cross.arc.gnu-feature/feature.properties
+++ b/org.eclipse.cdt.cross.arc.gnu-feature/feature.properties
@@ -6,10 +6,10 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=GNU ARC C/C++ Development Support
+featureName=ARC GNU Toolchain C/C++ Development Support
 
 # "providerName" property - name of the company that provides the feature
-providerName=SourceForge Project
+providerName=Synopsys, Inc. 
 
 # "updateSiteName" property - label for the update site
 updateSiteName=GNU ARC Plug-in Update Site
@@ -19,17 +19,15 @@ discoverySiteName=GNU ARC Plug-in Update Site
 
 # "description" property - description of the feature
 description=\
-The GNU ARC Eclipse Plug-in is an Eclipse CDT Manged Build Extension\n\
-for GNU ARC Toolchains GNUARC, and supports the development of managed C/C++ applications\n\
-for the ARC series of processors.
+The ARC GNU Toolchain Eclipse Plug-in is an Eclipse CDT Managed Build Extension for the development of managed C/C++ applications for the ARC series of processors.
 
 # "copyright" property - copyright holder
-copyright=Copyright © 2013 Yunlu Zhang and others.\n\
+copyright=Copyright © 2013 Synopsys, Inc.  All rights reserved.\n\
 
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
 licence=\
-The "GNU ARC Eclipse Plug-in" is free software.\n\
+The "ARC GNU Toolchain Eclipse Plug-in" is free software.\n\
 Permission is hereby granted, free of charge, to any person obtaining a\n\
 copy of this software and associated documentation files (the\n\
 "Software"), to deal in the Software without restriction, including\n\
