change debugger plugin version number to 1.0.0

--- a/com.arc.embeddedcdt-feature/feature.properties
+++ b/com.arc.embeddedcdt-feature/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2013 ARC AS.
+# Copyright (c) 2013 Synopsys, Inc.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -8,7 +8,7 @@
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
-Copyright (c) 2013 ARC AS.\n\
+Copyright (c) 2013 2013 Synopsys, Inc.\n\
 All rights reserved. This program and the accompanying materials\n\
 are made available under the terms of the Eclipse Public License v1.0\n\
 which accompanies this distribution, and is available at\n\
@@ -119,3 +119,4 @@ and re-export of encryption software, to see if this is permitted.\n\
 \n\
 Java and all Java-based trademarks are trademarks of Sun Microsystems, Inc. in the United States, other countries, or both.\n
 ########### end of license property ##########################################
+
