9000691855 C++ projects cannot be built with Eclipse

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1789,7 +1789,7 @@
          </option>
       </tool>
       <tool
-            command="arc-elf32-ld"
+            command="arc-elf32-gcc"
             commandLineGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
             errorParsers="org.eclipse.cdt.core.GLDErrorParser"
             id="org.eclipse.cdt.cross.arc.gnu.cpp.linker"
