9000692256 Allow disabling of COM port in IDE

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
@@ -7,7 +7,7 @@
 # 
 # Contributors:
 #     Bala Torati (Symbian) - initial API and implementation
-#     Yunlu Zhang         - ARC version
+#     Synopsys, Inc. - ARC GNU Toolchain support
 ###############################################################################
 
 #Template Default Values
