--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
@@ -11,17 +11,18 @@
 ###############################################################################
 
 #Template Default Values
-Empty.Ctemplate.label=Empty Project For ARC EM4
-Empty.Ctemplate.description=A skeletal Managed C Empty project for ARC EM4. Creates a folder for sources and another for include.
-Empty.basics.label=Basic Settings
-Empty.basics.description=Basic properties of a project
-Empty.author.label=Author
-Empty.author.description=Name of the author
-Empty.copyright.label=Copyright notice
-Empty.copyright.description=Your copyright notice
-Empty.copyright.default=Your copyright notice
-Empty.message.default=
-Empty.message.description=
-Empty.message.label=
-Empty.sourceDir.label=Source
-Empty.sourceDir.description=
+Emptyem4.Ctemplate.label=Empty Project For ARC EM4
+Emptyem4.Ctemplate.description=A skeletal Managed C Hello World project for ARC. Creates a folder for sources and another for include.
+Emptyem4.basics.label=Basic Settings
+Emptyem4.basics.description=Basic properties of a project
+Emptyem4.author.label=Author
+Emptyem4.author.description=Name of the author
+Emptyem4.copyright.label=Copyright notice
+Emptyem4.copyright.description=Your copyright notice
+Emptyem4.copyright.default=Your copyright notice
+Emptyem4.message.default=!!!Hello ARC World!!!
+Emptyem4.message.description=Your hello world greeting message
+Emptyem4.message.label=Hello world greeting
+Emptyem4.sourceDir.label=Source
+Emptyem4.sourceDir.description=Directory for hello world project source files
+Emptyem4.sourceDir.default=src
