STAR 9000688344: Use correct linker script for all templates
Include latest version of linker script and crt0.S file into EM4, EM6 and
Hello world templates.

Signed-off-by: Anton Kolesov <anton.kolesov@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
@@ -12,17 +12,9 @@
 
 #Template Default Values
 Emptyem4.Ctemplate.label=Empty Project For ARC EM4
-Emptyem4.Ctemplate.description=A skeletal Managed C Hello World project for ARC. Creates a folder for sources and another for include.
+Emptyem4.Ctemplate.description=A skeletal Managed C project for ARC EM4. Creates a folder for sources and contains linker script and start file.
 Emptyem4.basics.label=Basic Settings
 Emptyem4.basics.description=Basic properties of a project
-Emptyem4.author.label=Author
-Emptyem4.author.description=Name of the author
-Emptyem4.copyright.label=Copyright notice
-Emptyem4.copyright.description=Your copyright notice
-Emptyem4.copyright.default=Your copyright notice
-Emptyem4.message.default=!!!Hello ARC World!!!
-Emptyem4.message.description=Your hello world greeting message
-Emptyem4.message.label=Hello world greeting
 Emptyem4.sourceDir.label=Source
-Emptyem4.sourceDir.description=Directory for hello world project source files
+Emptyem4.sourceDir.description=Directory for project source files
 Emptyem4.sourceDir.default=src
