--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_Project/template.properties
@@ -11,17 +11,10 @@
 ###############################################################################
 
 #Template Default Values
-Empty.Ctemplate.label=Empty Project For ARC EM6
-Empty.Ctemplate.description=A skeletal Managed C Empty project for ARC EM4. Creates a folder for sources and another for include.
-Empty.basics.label=Basic Settings
-Empty.basics.description=Basic properties of a project
-Empty.author.label=Author
-Empty.author.description=Name of the author
-Empty.copyright.label=Copyright notice
-Empty.copyright.description=Your copyright notice
-Empty.copyright.default=Your copyright notice
-Empty.message.default=
-Empty.message.description=
-Empty.message.label=
-Empty.sourceDir.label=Source
-Empty.sourceDir.description=
+Emptyem6.Ctemplate.label=Empty Project For ARC EM6
+Emptyem6.Ctemplate.description=A skeletal Managed C project for ARC EM6. Creates a folder for sources and contains linker script and start file.
+Emptyem6.basics.label=Basic Settings
+Emptyem6.basics.description=Basic properties of a project
+Emptyem6.sourceDir.label=Source
+Emptyem6.sourceDir.description=Directory for project source files
+Emptyem6.sourceDir.default=src
