Add uclibc plugin, delete useless codes under elf

--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
@@ -1,13 +1,10 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
-               .,\
                about.html,\
                about.ini,\
                about.properties,\
                arc32x32b.gif,\
                bin/,\
-               plugin.xml,\
                build.properties,\
-               src/,\
-               templates/
+               README.txt,\
+               pluginwithoutcreat.xml,\
+               plugin.xml
