Rename debugger feature, add Elf32 plugin to it
Signed-off-by: Anton Kolesov <anton.kolesov@synopsys.com>

--- a/feature/.project
+++ b/feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ARC_debugger_features</name>
+	<name>ARC GNU Eclipse Feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
