9000696119 Support Run configuration

--- a/com.arc.embeddedcdt/plugin.xml
+++ b/com.arc.embeddedcdt/plugin.xml
@@ -32,11 +32,41 @@
             type="com.arc.embeddedcdt.idle"
             class="com.arc.embeddedcdt.gui.LaunchConfigurationTabGroup"
             id="com.arc.embeddedcdt.TabGroup">
+         <launchMode
+               description="ARCApplicationTabGroupDescription.debug"
+               mode="debug"
+               perspective="org.eclipse.debug.ui.DebugPerspective">
+         </launchMode>
       </launchConfigurationTabGroup>
       <launchConfigurationTabGroup
             type="com.arc.embeddedcdt.idleNative"
             class="com.arc.embeddedcdt.gui.LaunchConfigurationTabGroup"
             id="com.arc.embeddedcdt.TabGroup">
+            <launchMode 
+                  mode="debug"
+                  perspective="org.eclipse.debug.ui.DebugPerspective"
+                  description="ARCApplicationTabGroupDescription.debug">
+            </launchMode>
+      </launchConfigurationTabGroup>
+      <launchConfigurationTabGroup
+            class="com.arc.embeddedcdt.gui.RunfLaunchConfigurationTabGroup"
+            id="com.arc.embeddedcdt.RunTabGroup"
+            type="com.arc.embeddedcdt.idleNative">
+         <launchMode
+               description="ARCApplicationTabGroupDescription.run"
+               mode="run"
+               perspective="org.eclipse.debug.ui.DebugPerspective">
+         </launchMode>
+      </launchConfigurationTabGroup>
+      <launchConfigurationTabGroup
+            class="com.arc.embeddedcdt.gui.RunfLaunchConfigurationTabGroup"
+            id="com.arc.embeddedcdt.RunTabGroup"
+            type="com.arc.embeddedcdt.idle">
+         <launchMode
+               description="ARCApplicationTabGroupDescription.run"
+               mode="run"
+               perspective="org.eclipse.debug.ui.DebugPerspective">
+         </launchMode>
       </launchConfigurationTabGroup>
 	</extension>
 
