--- a/com.arc.embeddedcdt/.project
+++ b/com.arc.embeddedcdt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>arc_embeddedcdt</name>
+	<name>Debugger</name>
 	<comment></comment>
 	<projects>
 	</projects>
