Resolve many Java warning about unused imports
Remove unused imports and reorder the rest using Eclipse "Organize Imports."

Signed-off-by: Anton Kolesov <anton.kolesov@synopsys.com>

--- a/com.arc.embeddedcdt/build.properties
+++ b/com.arc.embeddedcdt/build.properties
@@ -3,26 +3,17 @@ output.arcembeddedcdt.jar = bin/
 bin.includes = plugin.xml,\
                arcembeddedcdt.jar,\
                icons/,\
-               cdtpatches.txt,\
                plugin.xml,\
                icons/,\
                build.properties,\
                bin/,\
-               ChangeLog,\
                .classpath,\
                .project,\
                plugin.properties,\
                META-INF/,\
-               helpwanted.txt,\
-               bugs.txt,\
                lib/
-src.includes = ChangeLog,\
-               bin/,\
-               cdtpatches.txt,\
+src.includes = bin/,\
                icons/,\
-               src/,\
-               lib/,\
-               helpwanted.txt,\
-               bugs.txt
+               lib/
 jars.compile.order = arcembeddedcdt.jar
 
