9000687710 Replace Putty with Eclipse plugin
To provides an Eclipse terminal plugin for the ARC debugger to emulate a
terminal for UART application, we need to launch terminal view inside
debugger plugin.

I also add the tested eclipse terminal source codes into this branch, for
we may need to customize it.

Delete putty and add terminal label/combo box

I commented out the previous putty codes, and add terminal labels/combo
boxes on debugerTab gui,But it is just for layout arrangement, will add
parameter reference amongst gui and terminal view later.

I also change previous method for checking com port, so we don't limit to use
window's platform registry, which may helpful for making debugger work on
linux platform.

--- a/com.arc.embeddedcdt/build.properties
+++ b/com.arc.embeddedcdt/build.properties
@@ -1,7 +1,5 @@
-source.arcembeddedcdt.jar = src/
 output.arcembeddedcdt.jar = bin/
 bin.includes = plugin.xml,\
-               arcembeddedcdt.jar,\
                icons/,\
                plugin.xml,\
                icons/,\
@@ -11,9 +9,13 @@ bin.includes = plugin.xml,\
                .project,\
                plugin.properties,\
                META-INF/,\
-               lib/
+               lib/,\
+               lib/commons-codec-1.3.jar,\
+               lib/commons-httpclient-3.1.jar,\
+               com.arc.embeddedcdt..jar
 src.includes = bin/,\
                icons/,\
                lib/
 jars.compile.order = arcembeddedcdt.jar
+source.com.arc.embeddedcdt..jar = src/
 
