--- a/com.arc.embeddedcdt/build.properties
+++ b/com.arc.embeddedcdt/build.properties
@@ -12,7 +12,8 @@ bin.includes = plugin.xml,\
                lib/,\
                lib/commons-codec-1.3.jar,\
                lib/commons-httpclient-3.1.jar,\
-               com.arc.embeddedcdt..jar
+               com.arc.embeddedcdt..jar,\
+               lib/RXTXcomm.jar
 src.includes = bin/,\
                icons/,\
                lib/
