--- a/org.eclipse.cdt.cross.arc.gnu/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                build.properties,\
                src/,\
-               templates/
+               templates/,\
+               .classpath
