--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_CPP_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem6.Ctemplate.label=Empty CPP Project For ARC EM6
+Emptyem6.Ctemplate.label=Empty C++ Project For ARC EM6
 Emptyem6.Ctemplate.description=A skeletal Managed CPP project for ARC EM6. Creates a folder for sources and contains linker script and start file.
 Emptyem6.basics.label=Basic Settings
 Emptyem6.basics.description=Basic properties of a project
