9000723305 Support ARC600/700 in compiler plugin
Support for 600 and 700 was returned back, this is supposed for '4.8-R4', but it
is also very useful for testing options enablement in this release.

Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -634,6 +634,16 @@
                   id="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arcv2hs"
                   name="ARCv2HS">
             </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mA6"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arc600"
+                  name="ARC600">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mA7"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arc700"
+                  name="ARC700">
+            </enumeratedOptionValue>
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
